Maybe fixed some spacing I hope

--- a/mobile.css
+++ b/mobile.css
@@ -92,7 +92,7 @@ li {
     color: #FFF;
     text-align: center;
     padding: 16ox 16px;
-	font-size: 2em;
+	font-size: 1.5em;
     text-decoration: none;
 }
 	
@@ -133,7 +133,7 @@ Containers
 
 #main {
 	margin: 5%;
-	margin-top: 10%;
+	margin-top: 12%;
 	margin-bottom: 10%;
 }
 
